Bug 189943 - toolbar position settings are not remembered
Summary: toolbar position settings are not remembered
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Shie Erlich
URL:
Keywords:
: 190680 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-18 10:14 UTC by Michał Kudła
Modified: 2013-03-18 21:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Kudła 2009-04-18 10:14:27 UTC
Version:           2.0.0 "Mars Pathfinder" (using 4.2.2 (KDE 4.2.2), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.28-gentoo-r2

I want to have toolbars on left window edge.
After relaunch application, toolbars are in top window edge.
Comment 1 Dario Andres 2009-05-16 02:19:28 UTC
*** Bug 190680 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2012-11-06 18:20:37 UTC
Still reproduciable in 2.4.0-beta3.
Comment 3 Jan Lepper 2013-03-18 21:15:39 UTC
Git commit f6cf18bfba0c9b059b3104aa9a3089a67d4c20e5 by Jan Lepper.
Committed on 18/03/2013 at 22:10.
Pushed by janlepper into branch 'master'.

FIXED: [ 189943 ] toolbar position settings are not remembered

M  +1    -0    ChangeLog
M  +4    -0    krusader/krusader.cpp

http://commits.kde.org/krusader/f6cf18bfba0c9b059b3104aa9a3089a67d4c20e5