FIXED: [ 189943 ] toolbar position settings are not remembered

BUG: 189943